Fixed gradle build issues with using java 21 on 1.20.1  :(
its too late for this